@@ -746,6 +746,7 @@ about.text.contributors=Slava Pestov\n\
 	Todd Papaioannou\n\
 	Tom Copeland\n\
 	Tom Locke\n\
+	Tom Power\n\
 	Trevor Harmon\n\
 	Vicente Salvador\n\
 	Vinod Kiran\n\
